--- a/config/west.yml
+++ b/config/west.yml
@@ -14,7 +14,7 @@ manifest:
       revision: main
       import: app/west.yml
     - name: zmk-keyboards
-      remote: DonSeq
+      remote: Cyboard-DigitalTailor
       revision: main
       import: config/west.yml
   self:
